# ordnet

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  process_words.sh
src/: dsl_dk.rs  lib.rs  main.rs  ordnet.rs  webpage.rs  word.rs
templates/: anki_obsidian.txt  ankiweb.html  default.txt  synonyms.txt
test/: ordnet_fragment.html
test/dsl/1/: desuden.html
test/dsl/3/: vokser.html
