[package]
name = "ordnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = {version = "0.10", features = ["vendored"]}
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.16.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.96"
tera = "1"
