[package]
name = "ordnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = {version = "0.10", features = ["vendored"]}
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.17"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.96"
tera = { version = "1", default-features = true }
urlencoding = "2.1.2"
clap = { version = "4", features = ["derive"] }
